rust-finl-unicode (1.2.0-1) UNRELEASED-FIXME-AUTOGENERATED-DEBCARGO; urgency=medium

  * Package finl_unicode 1.2.0 from crates.io using debcargo 2.7.5

 -- Ananthu C V <weepingclown@disroot.org>  Thu, 5 Dec 2024 01:21:42 +0530