@@ -10,12 +10,13 @@ Comment: Unicode copyright attribution is unncessary
  The copyright attribution to unicode mentioned in README.md is not valid in
  debian as the mentioned unicode data (files) are not included in the source.
  Instead the unicode-data package is used to get the relevant files, d/rules
- contains the instructions for symliking them during build time.
+ contains the instructions for symliking them during build time. Pregenerated
+ files are all excluded from the source and regenerated at build time.
 
 Files: debian/*
 Copyright:
- 2024 Debian Rust Maintainers <pkg-rust-maintainers@alioth-lists.debian.net>
- 2024 Ananthu C V <weepingclown@disroot.org>
+ 2025 Debian Rust Maintainers <pkg-rust-maintainers@alioth-lists.debian.net>
+ 2025 Ananthu C V <weepingclown@debian.org>
 License: MIT or Apache-2.0
 
 Files:
