@@ -21,8 +21,8 @@ Comment:
 
 Files: debian/*
 Copyright:
- 2024 Debian Rust Maintainers <pkg-rust-maintainers@alioth-lists.debian.net>
- 2024 Ananthu C V <weepingclown@disroot.org>
+ 2025 Debian Rust Maintainers <pkg-rust-maintainers@alioth-lists.debian.net>
+ 2025 Ananthu C V <weepingclown@debian.org>
 License: MIT or Apache-2.0
 
 License: Apache-2.0
