@@ -1,12 +1,20 @@
 overlay = "."
-uploaders = ["Ananthu C V <weepingclown@disroot.org>"]
+uploaders = ["Ananthu C V <weepingclown@debian.org>"]
 collapse_features = true
 
 # several files under different licenses used only for benchmarks
 # src/categories.rs also has test data from a website with its license
 # unknown, hence repacking it and adding the file back in d/missing-sources
 # with only data known to be copyrighted by the upstream author.
-excludes = ["benches/*", "resources/*", "src/categories.rs"]
+# src/data/*.rs are pregenerated, they are regenerated at build time
+excludes = [
+	 "benches/*",
+	 "resources/*",
+	 "src/categories.rs",
+	 "src/data/characters.rs",
+	 "src/data/grapheme_test.rs",
+	 "src/data/grapheme_property.rs"
+]
 
 [source]
 build_depends = ["librust-anyhow-1+default-dev", "librust-itertools-0.13+default-dev", "unicode-data"]
