@@ -10,7 +10,7 @@ DATA_DIR = ${CURDIR}/src/data
 execute_after_dh_auto_clean:
 	rm -f ${CURDIR}/src/categories.rs
 	# these pregenerated files are regenerated during the build time
-	rm -f ${DATA_DIR}/characters.rs ${DATA_DIR}/grapheme_test.rs ${DATA_DIR}/grapheme_characters.rs
+	rm -f ${DATA_DIR}/characters.rs ${DATA_DIR}/grapheme_test.rs ${DATA_DIR}/grapheme_property.rs
 
 execute_before_dh_auto_build:
 	# see debcargo.toml for the categories.rs as missing-source reasoning
