@@ -1,5 +1,6 @@
 rust-finl-unicode (1.2.0-1) UNRELEASED-FIXME-AUTOGENERATED-DEBCARGO; urgency=medium
 
-  * Package finl_unicode 1.2.0 from crates.io using debcargo 2.7.5
+  * Package finl_unicode 1.2.0 from crates.io using debcargo 2.7.10
+    (Closes: #1103598)
 
- -- Ananthu C V <weepingclown@disroot.org>  Thu, 5 Dec 2024 01:21:42 +0530
+ -- Ananthu C V <weepingclown@debian.org>  Sun, 31 Aug 2025 20:14:23 +0530
